# SmaugAssets

./: CMakeLists.txt  LICENSE  imgui.ini
assets/: camera.mtl  extend_gizmo.mtl  extrude_gizmo.mtl  eye_lock.pdn  eye_unlock.pdn  gizmo.mtl  paint_bucket.mtl  tick.mtl  top.mtl
